<resources>
    <string name="app_name">Hangman</string>
    <string name="playButton">Play!</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="todo">TODO</string>
    <string name="p">P</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="n">N</string>
    <string name="q">Q</string>
    <string name="z">Z</string>
    <string name="y">Y</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="o">O</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="guessString">S A M P L E</string>
    <string name="choose_difficulty">CHOOSE DIFFICULTY</string>
    <string name="medium">MEDIUM</string>
    <string name="insane">INSANE</string>
    <string name="easy">EASY</string>
    <string name="hard">HARD</string>
    <string name="word_apple">Word: APPLE</string>
    <string name="you_lose">You Lose!</string>
    <string name="you_win">You Win!!!</string>
    <string name="play_again">Play Again!</string>
    <string name="change_difficulty">Change Difficulty</string>
</resources>