<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoseActivity">

    <ImageView
        android:id="@+id/hangManLost"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/youLostMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hangmanmain" />

    <TextView
        android:id="@+id/youLostMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:autoSizeTextType="uniform"
        android:text="@string/you_lose"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/wordToGuess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hangManLost" />

    <Button
        android:id="@+id/playAgainLose"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/black"
        android:text="@string/play_again"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:theme="@style/HangmanTheme"
        app:layout_constraintBottom_toTopOf="@+id/changeDifficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordToGuess" />

    <Button
        android:id="@+id/changeDifficulty"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="80dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/black"
        android:text="@string/change_difficulty"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:theme="@style/HangmanTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playAgainLose" />

    <TextView
        android:id="@+id/wordToGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="6dp"
        android:autoSizeTextType="uniform"
        android:text="@string/word_apple"
        android:gravity="center_horizontal"
        android:autoSizeMaxTextSize="25sp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/playAgainLose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youLostMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>