<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WinActivity">

    <ImageView
        android:id="@+id/hangManImage"
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/hangmanwin"
        app:layout_constraintBottom_toTopOf="@+id/winMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/winMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autoSizeTextType="uniform"
        android:text="@string/you_win"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/playAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hangManImage" />

    <Button
        android:id="@+id/playAgain"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black"
        android:text="@string/play_again"
        android:textColor="@color/white"
        android:autoSizeTextType="uniform"
        android:textSize="20sp"
        android:textStyle="bold"
        android:theme="@style/HangmanTheme"
        app:layout_constraintBottom_toTopOf="@+id/changeDifficultyFromWin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winMessage" />

    <Button
        android:id="@+id/changeDifficultyFromWin"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="175dp"
        android:backgroundTint="@color/black"
        android:autoSizeTextType="uniform"
        android:text="@string/change_difficulty"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:theme="@style/HangmanTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playAgain" />

</androidx.constraintlayout.widget.ConstraintLayout>