<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DifficultyActivity">

    <TextView
        android:id="@+id/challengeDifficulty"
        android:layout_width="wrap_content"
        android:autoSizeMaxTextSize="30sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autoSizeTextType="uniform"
        android:gravity="center_horizontal"
        android:text="@string/choose_difficulty"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/easyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/easyButton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeTextType="uniform"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:text="@string/easy"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:theme="@style/HangmanTheme"
        app:layout_constraintBottom_toTopOf="@+id/mediumButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challengeDifficulty" />

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeTextType="uniform"
        android:background="@color/black"
        android:text="@string/medium"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:theme="@style/HangmanTheme"
        app:layout_constraintBottom_toTopOf="@+id/hardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easyButton" />

    <Button
        android:id="@+id/hardButton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeTextType="uniform"
        android:background="@color/black"
        android:text="@string/hard"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:theme="@style/HangmanTheme"
        app:layout_constraintBottom_toTopOf="@+id/insaneButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediumButton" />

    <Button
        android:id="@+id/insaneButton"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="100dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeTextType="uniform"
        android:background="@color/black"
        android:text="@string/insane"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:theme="@style/HangmanTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hardButton" />

</androidx.constraintlayout.widget.ConstraintLayout>